syntax = "proto3";

package api.protobuf.post.v1;

option go_package = "github.com/stonecutter/blog-microservices/api/protobuf/post/v1";

import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

service PostService {
  rpc GetPost(GetPostRequest) returns (GetPostResponse) {}
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse) {}
  rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse) {}
  rpc DeletePost(DeletePostRequest) returns (DeletePostResponse) {}
  rpc ListPosts(ListPostsRequest) returns (ListPostsResponse) {}
  rpc IncrementCommentCount(IncrementCommentCountRequest) returns (IncrementCommentCountResponse) {}
  rpc DecrementCommentCount(DecrementCommentCountRequest) returns (DecrementCommentCountResponse) {}
}

message Post {
  uint64 id = 1;
  string title = 2 [(validate.rules).string = {min_len: 1, max_len: 140}];
  string content = 3 [(validate.rules).string = {min_len: 1, max_len: 3000}];
  uint64 user_id = 4;
  uint32 comments_count = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message GetPostRequest {
  uint64 id = 1;
}

message GetPostResponse {
  Post post = 1;
}

message CreatePostRequest {
  Post post = 1;
}

message CreatePostResponse {
  Post post = 1;
}

message UpdatePostRequest {
  Post post = 1;
}

message UpdatePostResponse {
  bool success = 1;
}

message DeletePostRequest {
  uint64 id = 1;
}

message DeletePostResponse {
  bool success = 1;
}

message ListPostsRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ListPostsResponse {
  repeated Post posts = 1;
  uint64 count = 2;
}

message IncrementCommentCountRequest {
  uint64 id = 1;
}

message IncrementCommentCountResponse {
  bool success = 1;
}

message DecrementCommentCountRequest {
  uint64 id = 1;
}

message DecrementCommentCountResponse {
  bool success = 1;
}